--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,24 @@
-<h1>Display your Pirate here</h1>
 
 
-<h2>Display your first ship here</h2>
+<h1> Pirate </h1>
+<div class="pirate">
+<h3>Name: <%= @pirates.name %></h3><br>
+<h4>Weight: <%= @pirates.weight %></h4><br>
+<h4>Height: <%= @pirates.height %></h4><br>
+</div><br>
 
+<h2>Ships</h2>
+<% @ships.each do |ship| %>
+<div class="ship">
+<p>Name: <%= @ships.name %></p><br>
+<p>Type: <%= @ships.type %></p><br>
+<p>Booty: <%= @ships.booty %></p>
+</div><br>
 
 <h2>Display your second ship here</h2>
+<% @ships.each do |ship| %>
+    <div class="ship">
+    <p>Name: <%= @ships.name %></p><br>
+    <p>Type: <%= @ships.type %></p><br>
+    <p>Booty: <%= @ships.booty %></p>
+    </div><br>
